# swarm-news-ingest

./: README.md  pyproject.toml
config/: argus.e2e-canary.example.yaml  argus.example.yaml  sources.yaml
docs/: ARGUS_RECOVERY_REQUIREMENT_MATRIX.md  DEPLOY.md
src/argus/: pipeline.py  server.py
src/swarm_news_ingest/: cli.py  pipeline.py
tests/: test_pipeline.py  test_server.py
tests/fixtures/argus/: all-fail-sources.yaml  test-sources.yaml
tests/fixtures/argus/feeds/: empty_source.xml  huggingface.xml  openai.xml  reddit_localllama.xml
tests/fixtures/swarm-news/feeds/: arxiv_cs_ai.xml  cross_source_one.xml  cross_source_two.xml  dup_source.xml  dup_title_source.xml  hn_ai.xml  malformed_source.xml
