[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "swarm-news-ingest"
version = "0.1.0"
description = "Local-only swarm.channel news ingestion prototype"
requires-python = ">=3.9"
dependencies = ["PyYAML>=6.0", "requests>=2.31"]

[project.scripts]
swarm-news-ingest = "swarm_news_ingest.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

