[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "argus"
version = "0.1.0"
description = "Argus local-only RSS ingestion worker"
requires-python = ">=3.9"
dependencies = ["PyYAML>=6.0", "requests>=2.31"]

[project.scripts]
argus = "argus.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

